Adding multi client option
