# docs/swagger.json
@@ -21,7 +21,7 @@
     "host": "store-api.alchersan.com",
     "basePath": "/api/v1",
     "paths": {
-        "/autocomplete": {
+        "/{client}/autocomplete": {
             "get": {
                 "description": "get autocomplete",
                 "consumes": [
@@ -35,6 +35,13 @@
                 ],
                 "summary": "List autocomplete",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "format": "q",
@@ -74,7 +81,7 @@
                 }
             }
         },
-        "/blog": {
+        "/{client}/blog": {
             "get": {
                 "description": "List posts",
                 "consumes": [
@@ -88,6 +95,13 @@
                 ],
                 "summary": "Blog endpoint",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "format": "page=1",
@@ -127,7 +141,67 @@
                 }
             }
         },
-        "/products": {
+        "/{client}/blog/{id}": {
+            "get": {
+                "description": "get post by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "post"
+                ],
+                "summary": "Blog endpoint",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Post ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.Post"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/{client}/products": {
             "get": {
                 "description": "List products",
                 "consumes": [
@@ -141,6 +215,13 @@
                 ],
                 "summary": "Products endpoint",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "format": "q",
@@ -200,7 +281,7 @@
                     {
                         "type": "string",
                         "format": "fieldsort",
-                        "description": "fieldsort price or title.keyword",
+                        "description": "fieldsort final_price or title.keyword",
                         "name": "fieldsort",
                         "in": "query"
                     },
@@ -243,7 +324,7 @@
                 }
             }
         },
-        "/products/{id}": {
+        "/{client}/products/{id}": {
             "get": {
                 "description": "get product by ID",
                 "consumes": [
@@ -257,6 +338,13 @@
                 ],
                 "summary": "Products endpoint",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Product ID",
